[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "behave-django-helper"
version = "0.1.0"
description = "Reusable BDD helper functions for Python and Django projects"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Kislay PS", email = "kislay.ps@gmail.com" }
]
dependencies = [
  "pytest",
  "pytest-django"
]

[project.urls]
Homepage = "https://github.com/kislay-ps/bdd-test-helpers"
